// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyFigures Snapshots Empty Array 1`] = `
<ul
  className="sc-bdfBwQ dunVgO"
/>
`;

exports[`KeyFigures Snapshots With children 1`] = `
<ul
  className="sc-bdfBwQ dunVgO"
>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      Label
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      45 854
    </span>
  </li>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      Available
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      456 486
    </span>
  </li>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      New Label
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      346
    </span>
  </li>
</ul>
`;

exports[`KeyFigures Snapshots With figures 1`] = `
<ul
  className="sc-bdfBwQ dunVgO"
>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      Label
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      45 854
    </span>
  </li>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      Available
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      456 486
    </span>
  </li>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      New Label
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      346
    </span>
  </li>
</ul>
`;

exports[`KeyFigures Snapshots With one figure 1`] = `
<ul
  className="sc-bdfBwQ dunVgO"
>
  <li
    className="sc-gsTCUz kUYyaY"
  >
    <h3
      className="sc-dlfnbm fHuaOi"
    >
      Label
    </h3>
    <span
      className="sc-hKgILt lnIjCR"
    >
       
      45 854
    </span>
  </li>
</ul>
`;
